--- a/language/lang.properties
+++ b/language/lang.properties
@@ -2,5 +2,5 @@ lang_title = "ZengjfOS"
 lang_Demo_Analysis = "Demo_Analysis"
 lang_Show_Time = "Show_Time"
 lang_My_Girl = "My_Girl"
-lang_Keep_Walk" = "Keep_Walk" 
+lang_Keep_Walk = "Keep_Walk" 
 lang_About = "About"
