--- a/language/lang_zh.properties
+++ b/language/lang_zh.properties
@@ -1,6 +1,6 @@
-lang_title = "ZengjfOS"
-lang_Demo_Analysis = "Web绘图分析"
-lang_Show_Time = "示例演示"
-lang_My_Girl = "My_Girl"
-lang_Keep_Walk" = "持续学习" 
-lang_About = "站点信息"
+lang_title = ZengjfOS_zh
+lang_Demo_Analysis = Web绘图分析_zh
+lang_Show_Time = 示例演示_zh
+lang_My_Girl = My_Girl_zh
+lang_Keep_Walk = "持续学习_zh
+lang_About = 站点信息_zh
